--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion as Integer
-    buildToolsVersion rootProject.ext.buildToolsVersion as String
+    compileSdkVersion 24
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "jp.co.recruit.floatingview"
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:preference-v14:25.3.1'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
