--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,8 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         maven { url "https://jitpack.io" }
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
