--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -12,14 +12,25 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+        <!--<activity-->
+            <!--android:name="jp.co.recruit_lifestyle.sample.MainActivity"-->
+            <!--android:label="@string/app_name">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <!--Test Activity-->
         <activity
-            android:name="jp.co.recruit_lifestyle.sample.MainActivity"
+            android:name="jp.co.recruit_lifestyle.sample.TestActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <!-- デモ画面 -->
         <activity
             android:name="jp.co.recruit_lifestyle.sample.DeleteActionActivity"
