--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,19 +28,21 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v13:26.0.1'
-    compile 'com.android.support:preference-v14:26.0.1'
+    compile 'com.android.support:support-v13:26.0.2'
+    compile 'com.android.support:preference-v14:26.0.2'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
 
     compile "android.arch.lifecycle:runtime:1.0.0-alpha9"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha9"
+
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha9"
     compile "android.arch.persistence.room:runtime:1.0.0-alpha9"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha9"
     compile "android.arch.persistence.room:rxjava2:1.0.0-alpha9"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:26.0.2'
 
     implementation project(':library')
     implementation project(':arcmenu')
